--- a/src/app/karriere/karriere.component.scss
+++ b/src/app/karriere/karriere.component.scss
@@ -26,7 +26,7 @@
     .position__long {
         width: 100%;
         display: grid;
-        grid-template-columns: 1fr 60px;
+        grid-template-columns: 1fr 110px;
         justify-content: stretch;
         align-content: center;
         row-gap: 5px;
@@ -46,6 +46,12 @@
         @include for-desktop-up {
             padding: 10px 30px;
         }
+
+        i {
+            margin-left: 5px;
+            font-size: 1.5*$font-size-base;
+        }
+
     }
     
     .position {
