--- a/src/assets/styles/_app-variables.scss
+++ b/src/assets/styles/_app-variables.scss
@@ -57,10 +57,10 @@ $container-width-tablet-portrait: 800px;
 $container-width-tablet-landscape: 1000px;
 $container-width-desktop: 1200px;
 
-$header-height-phone: 60px;
-$header-height-tablet-portrait: 70px;
-$header-height-tablet-landscape: 80px;
-$header-height-desktop: 90px;
+$header-height-phone: 80px;
+$header-height-tablet-portrait: 90px;
+$header-height-tablet-landscape: 100px;
+$header-height-desktop: 110px;
 
 $poster-height-phone: 180px;
 $poster-height-tablet-portrait: 250px;
